--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dmamontov/favicon",
+    "name": "dayvsonmarques/favicon",
     "description": "Class generation favicon for browsers and devices Android, Apple, Windows and display of html code. It supports a large number of settings such as margins, color, compression, three different methods of crop and screen orientation.",
     "type": "library",
     "keywords": ["generation", "favicon", "browsers", "android", "apple", "windows"],
